--- a/examples/dropgram/static/index.html
+++ b/examples/dropgram/static/index.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Dropgram</title>
+<title>Dropgram</title>
 
-  <link href="/static/bootstrap.min.css" rel="stylesheet">
-  <script src="/static/jquery-2.2.2.min.js"></script>
+<link href="/static/bootstrap.min.css" rel="stylesheet">
+<script src="/static/jquery-2.2.2.min.js"></script>
 
-  <script>
-    $(document).ready(function() {
-      $.getJSON("/api/view", function(resp) {
+<script>
+$(document).ready(function() {
+    $.getJSON("/api/view", function(resp) {
+        var content = "";
+        for (var key in resp.grams) {
+            var gram = resp.grams[key];
+            content += '<h1>' + gram.published + '</h1> <img src="' + gram.filename + '" width="600">';
+            console.log(gram);
+        }
 
-      var content = "";
-      for (var key in resp.grams) {
-        var value = resp.grams[key];
-        content += '<h1>27.03.2016 by you</h1> <img src="' + value.filename + '" width="600">';
-        console.log(value);
-      }
-
-      var container = $("#content");
-      container.html(content);
+        var container = $("#content");
+        container.html(content);
     });
-   });
-  </script>
+});
+</script>
 </head>
 <body>
   <div class="page-header">
-    <h1>Dropgram <small>Private social network with images near <code>/dev/null</code> <form enctype="multipart/form-data" method="post">
-   <input type="file" name="f"></form></small></h1>
+    <h1>Dropgram <small>Private images storage near <code>/dev/null</code> <span style="font-size: 10pt; display: block"><form enctype="multipart/form-data" action="/api/upload" method="post" id="upload_form"><input type="file" name="f" id="upload_file"><input type="submit" value="Upload"></form></span></small></h1>
   </div>
   <div style="text-align: center" id="content">
   </div>
