Termporary redirect and uploading file to user cache

--- a/examples/dropgram/static/index.html
+++ b/examples/dropgram/static/index.html
@@ -28,7 +28,12 @@ $(document).ready(function() {
 </head>
 <body>
   <div class="page-header">
-    <h1>Dropgram <small>Private images storage near <code>/dev/null</code> <span style="font-size: 10pt; display: block"><form enctype="multipart/form-data" action="/api/upload" method="post" id="upload_form"><input type="file" name="f" id="upload_file"><input type="submit" value="Upload"></form></span></small></h1>
+    <h1>Dropgram <small>Private images storage near bash of <code>/dev/null</code> </small></h1>
+  </div>
+  <div style="text-align: center;" width="200pt">
+     <form enctype="multipart/form-data" action="/api/upload" method="post">
+         <input type="file" name="gram"><input type="submit" value="Upload">
+     </form>
   </div>
   <div style="text-align: center" id="content">
   </div>
